--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 ##################################################
 set(SRC
   src/main/main.cpp
+  src/checker/checker.cpp
   src/parser/parser.cpp
   src/solver/solver.cpp
 )
