--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.13)
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 #set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-set(PROJECT_NAME "Luby")
+set(PROJECT_NAME "mis")
 project(${PROJECT_NAME})
 
 
